--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>掘金牌2048</title>
     
-    <script type="module" crossorigin src="/assets/index.59846cfb.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.dd988ae4.js">
-    <link rel="stylesheet" href="/assets/vendor.8a879906.css">
-    <link rel="stylesheet" href="/assets/index.ad0e573e.css">
+    <script type="module" crossorigin src="./assets/index.cf599c48.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.bac1183c.js">
+    <link rel="stylesheet" href="./assets/vendor.8126e01d.css">
+    <link rel="stylesheet" href="./assets/index.ad0e573e.css">
   </head>
   <body>
     <div id="app"></div>
